# ndarray-slice

./: Cargo.toml  README.md  RELEASES.md
.github/workflows/: build.yml
src/: heap_sort.rs  insertion_sort.rs  lib.rs  merge_sort.rs  par.rs  partition.rs  partition_dedup.rs  quick_sort.rs  stable_sort.rs
src/par/: heap_sort.rs  insertion_sort.rs  merge_sort.rs  partition.rs  quick_sort.rs
