[package]
name = "ndarray-slice"
version = "0.1.0"
rust-version = "1.58"
edition = "2021"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
description = """Fast and robust slice-based algorithms (e.g., sorting, selection, search)
for non-contiguous (sub)views into n-dimensional arrays."""
documentation = "https://docs.rs/ndarray-slice"
repository = "https://github.com/qu1x/ndarray-slice"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
	"array",
	"ndarray",
	"numpy",
	"select",
	"sort",
]
categories = [
	"algorithms",
	"data-structures",
	"no-standard-library",
	"science",
]
include = [
	"src/**.rs",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ndarray = { version = "0.15.6", default-features = false }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[features]
default = ["std"]
std = ["ndarray/std"]

[profile.test]
opt-level = 2
